--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ fake-useragent = "^0.1.11"
 mypy = "^0.790"
 pytest = "^6.2.1"
 loguru = "^0.5.3"
+vulture = "^2.3"
 
 [[tool.poetry.source]]
 name = "tsinghua"
