--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,22 @@
 [tool.poetry]
 name = "tao_translate"
 version = "0.1.0"
-description = ""
-authors = ["D-zlich <2361018131@qq.com>"]
+description = "a translation program"
+authors = ["zlich <2361018131@qq.com>"]
+license = "MIT"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.25.1"
+loguru = "^0.5.3"
+mypy = "^0.800"
+pysimplegui = "^4.34.0"
+fake-useragent = "^0.1.11"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
-pysimplegui = "^4.32.1"
-requests = "^2.25.1"
-fake-useragent = "^0.1.11"
-mypy = "^0.790"
 pytest = "^6.2.1"
-loguru = "^0.5.3"
-vulture = "^2.3"
 
 [[tool.poetry.source]]
 name = "tsinghua"
